refactor: alterção da estrutura de pastas para consumo da API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">mobileVan</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
